--- a/discheduler/dicalendar/templates/dicalendar/index.html
+++ b/discheduler/dicalendar/templates/dicalendar/index.html
@@ -1,7 +1,8 @@
+<h1>Schedule A Migration</h1>
 {% if latest_migration_list %}
 <ul>
     {% for migration in latest_migration_list %}
-    <li><a href="/dicalendar/{{ migration.id }}/">{{ migration.migration_text }}</a></li>
+    <li><a href="{% url 'dicalendar:detail' migration.id %}">{{ migration.migration_text }}</a></li>
     {% endfor %}
 </ul>
 {% else %}
